--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
+
     
+    <h1>
+        Buziak
+    </h1>
+
+
+    <div>
+        <a>Home</a>
+        <a>About</a>
+        <a>Projects</a>
+        <a>Contact</a>
+    </div>
+
+
 </body>
 </html>
